[workspace]
members = [
	"webtransport-quinn",
	"webtransport-proto",
	"webtransport-generic",
	"webtransport-baton",
]
resolver = "2"

[patch.crates-io]
# quinn = { git = "https://github.com/ArckyPN/quinn.git" }
# quinn-proto = { git = "https://github.com/ArckyPN/quinn.git" }
quinn = { path = "../quinn-0.10.x/quinn" }
quinn-proto = { path = "../quinn-0.10.x/quinn-proto" }

